--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "reactify": "^1.1.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
